--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,7 +43,7 @@ small{
   color: white;
   font-size: 100px;
 }
-@media screen and (max-width: 1090px) {
+@media (min-width:1025px) and (max-width: 1200px) {
   h1{
     font-size: 70px;
   }
@@ -56,7 +56,7 @@ small{
     font-size: 30px;
   }
 }
-@media screen and (max-width: 1000px) {
+@media (min-width:769px)and (max-width: 1024px) {
   h1{
     font-size: 50px;
   }
@@ -70,7 +70,7 @@ small{
   }
 }
 
-@media screen and (max-width: 600px) {
+@media (min-width:481px) and (max-width: 768px) {
   h1{
     font-size: 30px;
   }
@@ -83,7 +83,7 @@ small{
     font-size: 20px;
   }
 }
-@media screen and (max-width: 365px) {
+@media screen and (max-width: 480px) {
   h1{
     font-size: 20px;
   }
