--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,7 +37,16 @@ span{
   padding: 15px;
 }
 .time{
-  text-align: center;
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+p{
+  font-size: 50px;
+  color: white;
+  margin: 20px;
+  padding: 10px;
 }
 small{
   color: white;
@@ -68,6 +77,11 @@ small{
   small{
     font-size: 30px;
   }
+  p{
+    font-size: 30px;
+    margin: 15px;
+    padding: 7px;
+  }
 }
 
 @media (min-width:481px) and (max-width: 768px) {
@@ -82,6 +96,11 @@ small{
   small{
     font-size: 20px;
   }
+  p{
+    font-size: 20px;
+    margin: 10px;
+    padding: 5px;
+  }
 }
 @media screen and (max-width: 480px) {
   h1{
@@ -94,6 +113,11 @@ small{
   }
   small{
     font-size: 10px;
+  }
+  p{
+    font-size: 10px;
+    margin: 5px;
+    padding: 5px;
   }
 }
   
