--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,6 +19,13 @@ body{
     overflow-x: hidden;
     overflow-y: scroll; 
 }
+a{
+    text-decoration: none;
+    color: #06f79b;
+}
+a:hover{
+    color: #0d798f;
+}
 .main{
     display: flex;
     flex-direction: column;
